# vigenere-victory

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Vigenere.cpp
Lib1/: CMakeLists.txt
Lib1/inc/: VingereDecipherer.h
Lib1/src/: MyClass.cpp  MyOtherClass.cpp
MyApp/: CMakeLists.txt  main.cpp
MyApp/inc/: MyClass.h
doc/: test_ciphers.txt  travis_yml_backup.txt
include/Lib1/: Input.h  Vigenere.h  VigenereDecipherer.h
lcov-output/: coverage.info  index-sort-f.html  index-sort-l.html  index.html
lcov-output/5/: chrono.func-sort-c.html  chrono.func.html  chrono.gcov.html  index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  iomanip.func-sort-c.html  iomanip.func.html  iomanip.gcov.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  limits.func-sort-c.html  limits.func.html  limits.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  ostream.func-sort-c.html  ostream.func.html  ostream.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  type_traits.func-sort-c.html  type_traits.func.html  type_traits.gcov.html  typeinfo.func-sort-c.html  typeinfo.func.html  typeinfo.gcov.html
lcov-output/5/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocated_ptr.h.func-sort-c.html  allocated_ptr.h.func.html  allocated_ptr.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  exception_ptr.h.func-sort-c.html  exception_ptr.h.func.html  exception_ptr.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ios_base.h.func-sort-c.html  ios_base.h.func.html  ios_base.h.gcov.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  predefined_ops.h.func-sort-c.html  predefined_ops.h.func.html  predefined_ops.h.gcov.html  range_access.h.func-sort-c.html  range_access.h.func.html  range_access.h.gcov.html  shared_ptr.h.func-sort-c.html  shared_ptr.h.func.html  shared_ptr.h.gcov.html  shared_ptr_base.h.func-sort-c.html  (+53 more)
lcov-output/5/ext/: aligned_buffer.h.func-sort-c.html  aligned_buffer.h.func.html  aligned_buffer.h.gcov.html  alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  atomicity.h.func-sort-c.html  atomicity.h.func.html  atomicity.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html
lcov-output/home/sapho/portfolio-work/vigenere-victory/include/Lib1/: Input.h.func-sort-c.html  Input.h.func.html  Input.h.gcov.html  VigenereDecipherer.h.func-sort-c.html  VigenereDecipherer.h.func.html  VigenereDecipherer.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcov-output/home/sapho/portfolio-work/vigenere-victory/src/App/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
lcov-output/home/sapho/portfolio-work/vigenere-victory/src/Lib1/: Input.cpp.func-sort-c.html  Input.cpp.func.html  Input.cpp.gcov.html  Vigenere.cpp.func-sort-c.html  Vigenere.cpp.func.html  Vigenere.cpp.gcov.html  Vigenere_Impl.cpp.func-sort-c.html  Vigenere_Impl.cpp.func.html  Vigenere_Impl.cpp.gcov.html  Vigenere_Impl.h.func-sort-c.html  Vigenere_Impl.h.func.html  Vigenere_Impl.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcov-output/home/sapho/portfolio-work/vigenere-victory/test/Lib1/: Input_test.cpp.func-sort-c.html  Input_test.cpp.func.html  Input_test.cpp.gcov.html  VigenereDecipherer_test.cpp.func-sort-c.html  VigenereDecipherer_test.cpp.func.html  VigenereDecipherer_test.cpp.gcov.html  Vigenere_test.cpp.func-sort-c.html  Vigenere_test.cpp.func.html  Vigenere_test.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcov-output/home/sapho/portfolio-work/vigenere-victory/test/catch/: catch.h.func-sort-c.html  catch.h.func.html  catch.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lcov-output/usr/include/x86_64-linux-gnu/c++/5/bits/: gthr-default.h.func-sort-c.html  gthr-default.h.func.html  gthr-default.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
matlab-script/: bash_test.m  matlab_get_string.sh  test.txt
old-stuff/Lib1/: CMakeLists.txt
old-stuff/Lib1/api/: Matlab.cpp
old-stuff/Lib1/inc/: Vigenere.h
old-stuff/Lib1/src/: Input.cpp  Input_Impl.h
old-stuff/MyApp/: CMakeLists.txt  main.cpp
old-stuff/test/: CMakeLists.txt  Input_test.cpp  VigenereDecipherer_test.cpp  Vigenere_test.cpp
old-stuff/test/catch/: Catch_Sample.cpp
scripts/: make-coveralls-lcov.sh  test.sh
src/App/: CMakeLists.txt  main.cpp
src/Lib1/: CMakeLists.txt  Input.cpp  Input.h  Input_Impl.cpp  Input_Impl.h  MessageBorderer.h  ScopedThreadGuard.h  Vigenere.cpp  VigenereDecipherer.cpp  VigenereDecipherer.h  VigenereSquare.h  Vigenere_Impl.cpp  Vigenere_Impl.h  matlab_api.h
test/: CMakeLists.txt  MyClass_test.cpp  MyOtherClass_test.cpp  main_test.cpp
test/Lib1/: Input_test.cpp  Matlab_api_test.cpp  VigenereDecipherer_test.cpp  Vigenere_test.cpp
test/inc/: MyClass.h
uml/: prog.puml
website/: callProg.php  index.php
website/css/: main.css
